--- a/styles.css
+++ b/styles.css
@@ -33,17 +33,18 @@ ul li{
   font-weight: bold;
 }
 
-@media screen and (max-width: 1000px) {
-  #navbar-list-2{
-    font-size: 16px;
+@media screen and (max-width: 778px) {
+  .pageTitle{
+    font-size: 3rem;  
   }
 }
 
-@media screen and (max-width: 800px) {
-  #navbar-list-2{
-    font-size: 14px;
+@media screen and (max-width: 600px) {
+  .pageTitle{
+    font-size: 1.5rem;  
   }
 }
+
 
 @font-face {
   font-family: myFirstFont;
